samples/_failures_safe/1761245304_788430_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9a1c1e6.c: In function ‘main’:
./samples/SAFE/__tmp_a9a1c1e6.c:137:20: error: missing terminating " character
  137 |             printf("\nResult of
      |                    ^~~~~~~~~~~~
./samples/SAFE/__tmp_a9a1c1e6.c:137:13: error: expected expression at end of input
  137 |             printf("\nResult of
      |             ^~~~~~
./samples/SAFE/__tmp_a9a1c1e6.c:137:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a9a1c1e6.c:137:13: error: expected declaration or statement at end of input
